--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ numpy
 pandas
 Pillow
 plotly
-torch-nightly==1.0.0.dev20181103
-torchvision-nightly==0.2.1
+torch_nightly -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
+torchvision-nightly
