--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy
-torchvision_nightly
-https://download.pytorch.org/whl/nightly/cpu/torch_nightly-1.0.0.dev20181105-cp37-cp37m-linux_x86_64.whl ; sys_platform == "linux"
+torchvision
+torch
 fastai
 Flask
 matplotlib
